<resources>
    <string name="app_name">Circle</string>
    <string name="action_settings">Settings</string>

    <!-- Home-->
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>

    <string name="title_map">Map</string>
    <string name="title_news">News</string>
    <string name="title_me">Me</string>
    <string name="title_chat">Chat</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
