<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_me" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_more" />

</menu>
